# retro-princing-scraper

./: .gitignore  LICENSE  README.md  Taskfile.yaml  pyproject.toml
input_files/: sample_collection_en.csv  sample_collection_fr.csv
output_files/: .gitkeep
price_enricher/: __init__.py  __main__.py  cache.py  fx.py  io_csv.py  models.py  pricing.py  utils.py
price_enricher/sources/: __init__.py  ebay.py  rgp.py
tests/: conftest.py  test_cache.py  test_io_csv.py  test_models.py  test_rgp.py  test_utils.py
