[project]
name = "price-enricher"
version = "0.1.0"
description = "Enrich video game collection CSV with online price estimates from eBay and RetroGamePrices"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Matt" }]

dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "pandas>=2.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "tenacity>=8.2.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "respx>=0.20.0",
    "pandas-stubs>=2.1.0",
    "types-beautifulsoup4>=4.12.0",
]

[project.scripts]
price-enricher = "price_enricher.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["price_enricher"]

[tool.black]
line-length = 120
target-version = ["py311"]
exclude = '''
/(
    \.venv
    | __pycache__
    | \.git
)/
'''

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
allow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"
